--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{19589D1F-1858-40D0-8484-0C0D0D83D6C9}</ProjectGuid>
+    <ProjectGuid>{8E24181B-E7B7-46ED-92CE-C42C7B0DC4F0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>HotelManageSystem</RootNamespace>
-    <AssemblyName>HotelManageSystem</AssemblyName>
+    <RootNamespace>酒店管理系统</RootNamespace>
+    <AssemblyName>酒店管理系统</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -54,6 +54,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQL.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
