--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -73,6 +73,12 @@
     <Compile Include="stage.Designer.cs">
       <DependentUpon>stage.cs</DependentUpon>
     </Compile>
+    <Compile Include="顾客—查询订单.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="顾客—查询订单.Designer.cs">
+      <DependentUpon>顾客—查询订单.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="admin.resx">
       <DependentUpon>admin.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,6 +99,9 @@
     </Compile>
     <EmbeddedResource Include="stage.resx">
       <DependentUpon>stage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="顾客—查询订单.resx">
+      <DependentUpon>顾客—查询订单.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
