--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -73,11 +73,17 @@
     <Compile Include="stage.Designer.cs">
       <DependentUpon>stage.cs</DependentUpon>
     </Compile>
-    <Compile Include="前台—查询订单信息.cs">
+    <Compile Include="前台—查询订单信息 - 复制.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="前台—查询订单信息.Designer.cs">
-      <DependentUpon>前台—查询订单信息.cs</DependentUpon>
+    <Compile Include="前台—查询订单信息 - 复制.Designer.cs">
+      <DependentUpon>前台—查询订单信息 - 复制.cs</DependentUpon>
+    </Compile>
+    <Compile Include="顾客—修改订单信息.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="顾客—修改订单信息.Designer.cs">
+      <DependentUpon>顾客—修改订单信息.cs</DependentUpon>
     </Compile>
     <Compile Include="顾客—查询订单信息.cs">
       <SubType>Form</SubType>
@@ -106,8 +112,11 @@
     <EmbeddedResource Include="stage.resx">
       <DependentUpon>stage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="前台—查询订单信息.resx">
-      <DependentUpon>前台—查询订单信息.cs</DependentUpon>
+    <EmbeddedResource Include="前台—查询订单信息 - 复制.resx">
+      <DependentUpon>前台—查询订单信息 - 复制.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="顾客—修改订单信息.resx">
+      <DependentUpon>顾客—修改订单信息.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="顾客—查询订单信息.resx">
       <DependentUpon>顾客—查询订单信息.cs</DependentUpon>
