--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -79,6 +79,12 @@
     <Compile Include="前台—查询订单信息 - 复制.Designer.cs">
       <DependentUpon>前台—查询订单信息 - 复制.cs</DependentUpon>
     </Compile>
+    <Compile Include="前台线下预定.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="前台线下预定.designer.cs">
+      <DependentUpon>前台线下预定.cs</DependentUpon>
+    </Compile>
     <Compile Include="顾客—修改订单信息.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="前台—查询订单信息 - 复制.resx">
       <DependentUpon>前台—查询订单信息 - 复制.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="前台线下预定.resx">
+      <DependentUpon>前台线下预定.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="顾客—修改订单信息.resx">
       <DependentUpon>顾客—修改订单信息.cs</DependentUpon>
