--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -73,11 +73,11 @@
     <Compile Include="stage.Designer.cs">
       <DependentUpon>stage.cs</DependentUpon>
     </Compile>
-    <Compile Include="前台—查询订单信息 - 复制.cs">
+    <Compile Include="前台—查询订单信息.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="前台—查询订单信息 - 复制.Designer.cs">
-      <DependentUpon>前台—查询订单信息 - 复制.cs</DependentUpon>
+    <Compile Include="前台—查询订单信息.Designer.cs">
+      <DependentUpon>前台—查询订单信息.cs</DependentUpon>
     </Compile>
     <Compile Include="前台线下预定.cs">
       <SubType>Form</SubType>
@@ -118,8 +118,8 @@
     <EmbeddedResource Include="stage.resx">
       <DependentUpon>stage.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="前台—查询订单信息 - 复制.resx">
-      <DependentUpon>前台—查询订单信息 - 复制.cs</DependentUpon>
+    <EmbeddedResource Include="前台—查询订单信息.resx">
+      <DependentUpon>前台—查询订单信息.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="前台线下预定.resx">
       <DependentUpon>前台线下预定.cs</DependentUpon>
