--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -97,6 +97,12 @@
     <Compile Include="顾客—查询订单信息.Designer.cs">
       <DependentUpon>顾客—查询订单信息.cs</DependentUpon>
     </Compile>
+    <Compile Include="顾客线上预订.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="顾客线上预订.Designer.cs">
+      <DependentUpon>顾客线上预订.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="admin.resx">
       <DependentUpon>admin.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="顾客—查询订单信息.resx">
       <DependentUpon>顾客—查询订单信息.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="顾客线上预订.resx">
+      <DependentUpon>顾客线上预订.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
