--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -91,6 +91,12 @@
     <Compile Include="stage.Designer.cs">
       <DependentUpon>stage.cs</DependentUpon>
     </Compile>
+    <Compile Include="前台—修改订单信息.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="前台—修改订单信息.designer.cs">
+      <DependentUpon>前台—修改订单信息.cs</DependentUpon>
+    </Compile>
     <Compile Include="前台—查询订单信息.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,12 +121,6 @@
     <Compile Include="顾客—查询订单信息.Designer.cs">
       <DependentUpon>顾客—查询订单信息.cs</DependentUpon>
     </Compile>
-    <Compile Include="顾客线上预订.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="顾客线上预订.Designer.cs">
-      <DependentUpon>顾客线上预订.cs</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="admin.resx">
       <DependentUpon>admin.cs</DependentUpon>
     </EmbeddedResource>
@@ -142,6 +142,9 @@
     <EmbeddedResource Include="stage.resx">
       <DependentUpon>stage.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="前台—修改订单信息.resx">
+      <DependentUpon>前台—修改订单信息.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="前台—查询订单信息.resx">
       <DependentUpon>前台—查询订单信息.cs</DependentUpon>
     </EmbeddedResource>
@@ -153,9 +156,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="顾客—查询订单信息.resx">
       <DependentUpon>顾客—查询订单信息.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="顾客线上预订.resx">
-      <DependentUpon>顾客线上预订.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
