--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -103,6 +103,12 @@
     <Compile Include="前台—查询订单信息.Designer.cs">
       <DependentUpon>前台—查询订单信息.cs</DependentUpon>
     </Compile>
+    <Compile Include="取消订单.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="取消订单.designer.cs">
+      <DependentUpon>取消订单.cs</DependentUpon>
+    </Compile>
     <Compile Include="客房预定.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="前台—查询订单信息.resx">
       <DependentUpon>前台—查询订单信息.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="取消订单.resx">
+      <DependentUpon>取消订单.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="客房预定.resx">
       <DependentUpon>客房预定.cs</DependentUpon>
