--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Form1.designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Earnings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Earnings.Designer.cs">
+      <DependentUpon>Earnings.cs</DependentUpon>
+    </Compile>
     <Compile Include="RoomInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="customer.resx">
       <DependentUpon>customer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Earnings.resx">
+      <DependentUpon>Earnings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
