--- a/酒店管理系统.csproj
+++ b/酒店管理系统.csproj
@@ -121,6 +121,12 @@
     <Compile Include="客房预定.designer.cs">
       <DependentUpon>客房预定.cs</DependentUpon>
     </Compile>
+    <Compile Include="管理_修改房间信息.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="管理_修改房间信息.Designer.cs">
+      <DependentUpon>管理_修改房间信息.cs</DependentUpon>
+    </Compile>
     <Compile Include="顾客—修改订单信息.cs">
       <SubType>Form</SubType>
     </Compile>
